--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -66,5 +66,9 @@
         "image": "Ảnh đại diện",
         "create": "Thêm người dùng",
         "edit": "Lưu thay đổi"
+    },
+    "home-page": {
+        "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
+        "more-info": "Xem thêm"
     }
 }
