complete detail doctor page

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -49,6 +49,9 @@
             "manage-specialty": "Manage Specialties",
             "handbook": "Handbooks",
             "manage-handbook": "Manage Handbook"
+        },
+        "doctor": {
+            "manage-schedule": "Manage schedule"
         }
     },
     "manage-user": {
