--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -73,5 +73,11 @@
     "home-page": {
         "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
         "more-info": "Xem thêm"
+    },
+    "manage-schedule": {
+        "title": "Quản lý lịch trình khám bệnh của bác sĩ",
+        "choose-doctor": "Chọn bác sĩ",
+        "choose-date": "Chọn ngày",
+        "save": "Lưu thông tin"
     }
 }
