--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -91,6 +91,13 @@
             "non-schedule": "The doctor does not have an appointment during this time, please choose another time.",
             "choose": "Choose ",
             "book-free": " and book (free)"
+        },
+        "extra-info-doctor": {
+            "address-clinic": "Clinic address",
+            "price-exam": "Examination price",
+            "hide-price": "Hide price list",
+            "show-price": "See details",
+            "note-patient": "The patient can pay the cost in the form of: "
         }
     },
     "admin": {
