--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -98,6 +98,20 @@
             "hide-price": "Hide price list",
             "show-price": "See details",
             "note-patient": "The patient can pay the cost in the form of: "
+        },
+        "booking-modal": {
+            "title": "Information to book a medical appointment: ",
+            "fullName": "Full name",
+            "phoneNumber": "Phone number",
+            "email": "Email",
+            "address": "Address",
+            "reason": "Reasons for medical examination",
+            "birthday": "Birthday",
+            "gender": "Sex",
+            "btnConfirm": "Confirm",
+            "btnCancel": "Cancel",
+            "priceBooking": "medical examination price: ",
+            "freeBooking": "Free appointment booking"
         }
     },
     "admin": {
